[gd_scene load_steps=3 format=2]

[ext_resource path="res://todo_page.gd" type="Script" id=1]

[sub_resource type="Theme" id=2]
VBoxContainer/constants/separation = 4

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_right = 1022.0
margin_bottom = 598.0

[node name="priority1" type="Panel" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/priority1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/priority1/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Priority 1"

[node name="priority2" type="Panel" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/priority2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/priority2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Priority 2"

[node name="priority3" type="Panel" parent="HBoxContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/priority3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/priority3/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Priority 3"

[node name="priority4" type="Panel" parent="HBoxContainer"]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/priority4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/priority4/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Priority 4"

[node name="priority5" type="Panel" parent="HBoxContainer"]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 598.0
rect_min_size = Vector2( 200, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/priority5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( -1023, 109 )
theme = SubResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/priority5/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "no Priority"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
